# cmake_sampler

./: CMakeLists.txt  README.MD
lib/: CMakeLists.txt
lib/inc/: add.h
lib/src/: add.cpp
src/: CMakeLists.txt  main.cpp
